bugfix couldn't scroll on smaller screen

--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body{
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  /* overflow: scroll; */
 
   display: flex;
   justify-content: center;
@@ -21,4 +21,10 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+@media only screen and (min-width: 793px) {
+  body {
+    overflow: hidden;
+  }
 }
